Production-Ready-project/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: default
spec:
  parentRefs:
  - name: app-gateway
    namespace: default
  hostnames:
  - "argo.anishbista.xyz"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
      kind: Service 

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: go-app-route
spec:
  parentRefs:
  - name: app-gateway
    namespace: default
  hostnames:
  - "demo.anishbista.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-app-service
      port: 80
